--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -12,15 +12,23 @@
   <!-- page title area -->
   <section class="page__title-area pt-85">
     <div class="container">
+
       <div class="row">
-        <div class="col-xxl-12">
-            <div class="page__title-wrapper mb-55">
-                <h1 class="about__title">Explore Our latest blogs.</h1>
-                <p>Dive into our dynamic collection of the latest blog posts. We bring you a curated selection of articles covering a wide range of topics, 
-                  including web design trends, development tips, and industry news.Stay updated with the latest trends, gain new perspectives, and learn best practices to 
-                  enhance your online presence. Immerse yourself in our ever-growing collection of engaging and thought-provoking blog posts, designed to empower and educate
-                   our community.</p>
-            </div>
+        <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
+          <div class="hero__content">
+            <h1 class="hero__title">
+              <span>Explore our<br></span>
+              Latest blogs.
+            </h1>
+            <h2 class="about__sub-title">Stay Updated with Our Latest Blogs</h2>
+            <p>
+              Dive into our dynamic collection of the latest blog posts. We bring you a curated selection of articles covering a wide range of topics, 
+              including web design trends, development tips, and industry news.Stay updated with the latest trends, gain new perspectives, and learn best practices to 
+              enhance your online presence. Immerse yourself in our ever-growing collection of engaging and thought-provoking blog posts, designed to empower and educate
+               our community.
+                
+            </p>
+          </div>
         </div>
       </div>
     </div>
