--- a/templates/footer.html
+++ b/templates/footer.html
@@ -94,7 +94,7 @@
                       <div class="footer__bottom-link wow fadeInUp text-md-end" data-wow-delay=".8s">
                          <ul>
                             <li><a href="{% url 'terms_and_condition' %}">Terms and Conditions</a></li>
-                            <li><a href="{% url 'about' %}">Privacy Policy </a></li>
+                            <li><a href="{% url 'privacy_policy' %}">Privacy Policy </a></li>
                             <li><a href="{% url 'about' %}">Affiliate Notice</a></li>
                          </ul>
                       </div>
