--- a/templates/home.html
+++ b/templates/home.html
@@ -281,15 +281,14 @@
   <section class="cta__area pt-100 pb-60">
     <div class="container">
       <div class="row">
-        <div
-          class="col-xxl-6 offset-xxl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1"
-        >
-          <div class="section__title-wrapper text-center mb-45">
-            <h2 class="section__title wow fadeInUp" data-wow-delay=".3s">
-              Create Your Own Online Platform <span>Today</span>
+        <div class="col-xxl-12">
+          <div class="section__title-wrapper text-center mb-60">
+            <h2 class="section__title">
+              Create Your Own Online <br>Platform <span>Today</span>
             </h2>
-            <p class="wow fadeInUp" data-wow-delay=".5s">
+            <p>
               Create your own online platform with our Templates and Theme Market. Our expert team will guide you through the process of designing and developing a customized website, web app and many more tailored to your unique needs. Choose from a wide range of themes and templates, to enhance your business or product visibility. With our comprehensive platform-building solutions, you can establish a strong online presence, attract targeted visitors, and achieve your business goals. Start building your platform today and stand out from the competition.
+
             </p>
           </div>
         </div>
