--- a/templates/about.html
+++ b/templates/about.html
@@ -13,11 +13,24 @@
 
     <!-- about area start -->
     <section class="about__area pt-100">
+      <div class="container">
+         <div class="row">
+           
+         </div>
+      </div>
+
        <div class="container">
           <div class="row">
+            <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
+               <div class="hero__content">
+                 <h1 class="hero__title">
+                   <span>We're enabling<br></span>
+                   Everyone to create their own website.
+                 </h1>
+               </div>
+             </div>
              <div class="col-xxl-10 offset-xxl-1 col-xl-10 offset-xl-1">
                 <div class="about__wrapper">
-                   <h1 class="about__title">We're enabling <br> Everyone to create their own website.</h1>
                    <div class="about__thumb w-img wow fadeInUp" data-wow-delay=".3s">
                       <img src="{% static 'assets/img/about/about.jpg' %}" alt="spellsoft">
                    </div>
@@ -60,7 +73,6 @@
             <div class="col-xxl-6 offset-xxl-3 col-xl-6 offset-xl-3 col-lg-8 offset-lg-2">
                <div class="section__title-wrapper text-center mb-65">
                   <h2 class="section__title">Frequently Asked Questions</h2>
-                  <p>A load of old tosh the full monty sloshed pukka squiffy.</p>
                </div>
             </div>
          </div>
