--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,10 +21,13 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-xxl-12">
-                    <div class="page__title-wrapper mb-55">
-                        <h1 class="page__title-2">Leave Us a Message.</h1>
-                        <p>If you have any questions or need assistance, don't hesitate to reach out to our friendly support team. We're here to help!</p>
+                <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                    <div class="hero__content">
+                      <h1 class="hero__title">
+                        <span>We're Here to Help<br></span>
+                        Contact Us for any Inquiries
+                      </h1>
+                      <p>If you have any questions or need assistance, don't hesitate to reach out to our friendly support team. We're here to help!</p>
                     </div>
                 </div>
             </div>
