--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,41 +2,56 @@
 {% include 'nav.html' %}
 {% include 'meta/themes_meta.html' %}
 {% include 'header.html' %}
-
-    <!-- category area start -->
-    <section class="category__area pt-105 pb-135">
-        <div class="container">
-           <div class="row">
-              <div class="col-xxl-12">
-                 <div class="section__title-wrapper text-center mb-60">
-                    <h2 class="section__title">Browse <br> Popular Categories</h2>
-                    <p>Find over {{templates_ct}} website templates and themes.</p>
-                 </div>
-              </div>
+  <!-- category area start -->
+  <section class="category__area pt-105 pb-135">
+   <div class="container">
+      <div class="row">
+         <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
+             <div class="hero__content">
+               <h1 class="hero__title">
+                 <span>Browse<br></span>
+                 Popular Categories
+               </h1>
+               <p>Browse through our extensive selection of popular categories in the template and theme market and uncover the ideal
+                  designs and solutions customized to meet your specific requirements.</p>
+             </div>
+         </div>
+     </div>
+     <div class="row">
+       {% for category in category %}
+       <div class="col-xxl-3 col-xl-3 col-md-6 col-sm-6">
+         <div
+           class="category__item transition-3 text-center white-bg mb-30 wow fadeInUp"
+           data-wow-delay=".3s"
+         >
+           <div class="category__icon mb-25">
+             <a href="#"
+               ><img src="{{category.category_image.url}}" alt="spellsoft"
+             /></a>
            </div>
-           <div class="row">
-             {% for category in category %}
-              <div class="col-xxl-3 col-xl-3 col-md-6 col-sm-6">
-                 <div class="category__item transition-3 text-center white-bg mb-30 wow fadeInUp" data-wow-delay=".3s" >
-                    <div class="category__icon mb-25">
-                       <img src="{{category.category_image.url}}" alt="spellsoft">
-                    </div>
-                    <div class="category__content">
-                       <h3 class="category__title">
-                          {{category.category}}
-                       </h3>
-                       <a href="{% url 'theme' %}" class="link-btn">
-                       <i class="far fa-long-arrow-right"></i>
-                       Learn More
-                       </a>
-                    </div>
-                 </div>
-                </div>
-             {% endfor %}
+           <div class="category__content">
+             <h3 class="category__title">{{category.category}}</h3>
+             <a href="{% url 'theme' %}" class="link-btn">
+               <i class="far fa-long-arrow-right"></i>
+               Learn More
+             </a>
            </div>
-        </div>
-     </section>
-     <!-- category area end -->
+         </div>
+       </div>
+       {% endfor %}
+     </div>
+     <div class="row">
+       <div class="col-xxl-12">
+         <div class="category__more mt-30 text-center">
+           <a href="{% url 'categories' %}" class="m-btn m-btn-2">
+             <span></span> View all categories</a
+           >
+         </div>
+       </div>
+     </div>
+   </div>
+ </section>
+ <!-- category area end -->
 
 
 {% include 'footer.html' %}
